# PersonalFinanceManager

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
.github/workflows/: cpp-tests.yml
src/: Account.cpp  Account.h  Budget.cpp  Budget.h  Category.cpp  Category.h  FinanceManager.cpp  FinanceManager.h  Transaction.cpp  Transaction.h  main.cpp
tests/: test_account_gtest.cpp  test_all_gtest.cpp  test_transaction.cpp  test_transaction_gtest.cpp
